# Specula.bak

./: .clang-format  .cmake-format.yml  .codecov.yml  .config.json  .gitignore  .gitlab-ci.yml  .gitmodules  .python-version  .travis.yml  .workspace.code-workspace  CMakeLists.txt  Doxyfile.in  Jenkinsfile  Makefile  Notes.md  README.md  _coverpage.md  _sidebar.md  compile_commands.json  config.json  contributing.md  core  dir_26db96966dabc582ccddf970f4208118.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  gen.sh  main_8dox.html  menudata.js  namespacespecula.html  notes.txt  render.dot  specula  specula.code-workspace  specula_8hpp.html  specula_8hpp_source.html
cli/: CMakeLists.txt  main.cpp  progress.cpp  progress.hpp
docs/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  MAIN.md  README.md  _coverpage.md  _sidebar.md  extra.css  extra.less  header.html  index.html  main.dox  main.md  new.css  outline.md  process.dot
docs/api/: README.md
docs/downloads/: README.md  _coverpage.md
docs/doxygen/: DoxygenLayout.xml  header.html
docs/examples/: README.md
docs/getting_started/: README.md
docs/outline/: base.dot  gen.py  outline.dot  status.dot  test.dot
docs/pages/: goals.md  sdf.md  style.md
docs/paper/: specula.aux  specula.fdb_latexmk  specula.fls  specula.tex
docs/paper/_minted-specula/: 365A8D16C2099C762AEE72783D38A25BC97BD28EE9D526E0D4FF0759E6BB52CA.pygtex
docs/paper/sec/: intro.aux  intro.fdb_latexmk  intro.fls  intro.tex  math.aux  math.fdb_latexmk  math.fls  math.pyg  math.tex
docs/theory/: theory.md
gui/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/specula/: core.hpp  dev.hpp  global.hpp  specula.hpp  version.hpp  version.hpp.in
lib/include/specula/core/: camera.hpp  efloat.hpp  film.hpp  imageio.hpp  interaction.hpp  medium.hpp  memory.hpp  sampler.hpp  sampling.hpp  transform.hpp
lib/include/specula/core/geometry/: bounds.hpp  (+6 more)
lib/include/specula/dev/: error.hpp  log.hpp  prof.hpp  progress.hpp
lib/include/specula/global/: constants.hpp  declarations.hpp  functions.hpp  include.hpp  macros.hpp  os.hpp  rand.hpp
lib/src/core/: imageio.cpp  interaction.cpp  medium.cpp  memory.cpp  parallel.cpp  quaternion.cpp  sampler.cpp  sampling.cpp
lib/src/core/geometry/: bounds.cpp
lib/src/core/spectrum/: coefficient.cpp  common.cpp  rgb.cpp  sampled.cpp
lib/src/core/transform/: animated_transform.cpp  transform.cpp
lib/src/dev/: log.cpp  prof.cpp  progress.cpp
lib/src/geometry/: matrix.cpp  normal.cpp  vector.cpp
lib/src/global/: rand.cpp
scripts/: CMakeLists.txt  binary_to_compressed.cpp  compile_kernel.sh  coverage.py  sphere.lua  website.sh
src/: CMakeLists.txt  Makefile  animated_transform.cpp  bsdf.cpp  bsdf.hpp  cl.cpp  cli.cpp  cli.hpp  color.cpp  core.cpp  cpu_render.cpp  cpu_render.hpp  cpu_renderer.cpp  cpu_renderer.hpp  generator.cpp  geometry.cpp  gpu.cpp  gpu_render_tile.cl  image.cpp  kernels.hpp  log.cpp  lua_binding.cpp  main.cpp  material.cpp  object.cpp  primatives.cpp  prof.cpp  quaternion.cpp  rand.cpp  ray.hpp  renderer.cpp  renderer_args.cpp  scene.cpp  specula.cpp  specula.hpp  sphere.cpp  thread.hpp  transform.cpp
src/cli/: argparse.cpp  progress_bar.cpp
src/core/: camera.cpp  efloat.cpp  film.cpp  filter.cpp  interaction.cpp  light.cpp  lightdistrib.cpp  material.cpp  microfacet.cpp  parallel.cpp  reflection.cpp  rng.cpp  sampling.cpp  shape.cpp  texture.cpp  transform.cpp
src/core/geometry/: bounds2.cpp  bounds3.cpp  bounds4.cpp  common.cpp  epsilon.cpp  geometric.cpp  integer.cpp  interval.cpp  matrix_access.cpp  noise.cpp  norm.cpp  point.cpp  quaternion.cpp  random.cpp  ray.cpp  ray_differential.cpp  relational.cpp  trigonometry.cpp
src/core/spectrum/: sampled.cpp
src/core/transform/: animated_transform.cpp  transform.cpp
src/dbg/: log.cpp  prof.cpp
src/dev/: log.cpp  prof.cpp
src/geometry/: bounds2.cpp  bounds3.cpp  common.cpp  geometric.cpp  normal3.cpp  point.cpp  point2.cpp  point3.cpp  ray.cpp  ray_differential.cpp  sdf.cpp  vector.cpp  vector2.cpp  vector3.cpp
src/global/: math.cpp
src/image/: bmp.cpp  image.cpp  image.hpp  image_class.cpp  img.cpp  jpeg.cpp  png.cpp  write_png.cpp  write_png.hpp
src/kernels/: alterations.cl  primatives.cl  scene.cl  sdf.cl  util.cl
src/material/: bsdf.cpp
src/math/: bounds.cpp  common.cpp  geometric.cpp  interp.cpp  interval.cpp  quaternion.cpp  ray.cpp  ray_differential.cpp
src/math/bounds/: bounds2.cpp  bounds3.cpp  bounds4.cpp
src/math/matrix/: matrix2x2.cpp  matrix3x3.cpp  matrix4x4.cpp  matrixnxm.cpp  matrixnxn.cpp
src/math/normal/: normal2.cpp  normal3.cpp  normal4.cpp
src/math/point/: point2.cpp  point3.cpp  point4.cpp
src/math/vector/: vector2.cpp  vector3.cpp  vector4.cpp  vectorn.cpp
src/object/: circle.cpp  object.cpp  object_class.cpp  plane.cpp  sphere.cpp
src/primatives/: angle_solid.cpp  box.cpp  box_round.cpp  capsule.cpp  capsule_vertical.cpp  cone.cpp  cone_capped.cpp  cone_infinite.cpp  cone_round.cpp  cylinder.cpp  cylinder_capped.cpp  cylinder_infinite.cpp  cylinder_rounded.cpp  derived.cpp  ellipsoid.cpp  link.cpp  octahedron.cpp  onioned.cpp  plane.cpp  primative.cpp  prism_hexagonal.cpp  prism_triangular.cpp  quad.cpp  rounded.cpp  sphere.cpp  template.cpp  torus.cpp  torus_capped.cpp  triangle.cpp
src/render/: caster.cpp  renderer.cpp
src/script/: chai_script.cpp  lua_script.cpp
src/shader/: bsdf.cpp  fresnel.cpp  material.cpp  shader.cpp
src/shapes/: sphere.cpp
src/std/: filesystem.cpp  fwatch.cpp
src/terminal/: progress_bar.cpp
src/transform/: animated_transform.cpp  transform.cpp
src/util/: argparse.cpp  argparse.hpp  log.cpp  log.hpp  time.cpp  time.hpp  util.hpp
tests/: CMakeLists.txt  imageio.cpp  log.cpp  main.cpp  parallel.cpp  sampling.cpp  spectrum.cpp
tests/util/: fmt.cpp  log.cpp
tools/: CMakeLists.txt  argparse.cpp  argparse.hpp  colors.hpp  fonts.hpp  gl.cpp  gl.hpp  gui.cpp  gui.hpp  imgui_ser.cpp  imgui_ser.hpp  main.cpp
tools/glad/: glad.c  glad.h  khrplatform.h
tools/gui/: editor.cpp  editor.hpp  file.cpp  file.hpp  window.cpp  window.hpp
(+685 files in other folders)
